# hc-assay

./: .gitignore  .pip-audit-ignore  .uv-exclude-newer  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  METHODOLOGY.md  Makefile  README.md  SECURITY.md  assay_mlflow.db  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHARTER.md  GLOSSARY.md  GOVERNANCE.md  MERGE-POLICY.md  METHODOLOGY.md  prior-art.md  question-rationale.md  scoring-model.md
docs/decisions/: ADR-0001-independent-blind-baseline.md  ADR-0002-engine-adapter-blueprint.md  ADR-0003-local-first-data-sovereign.md  ADR-0004-three-verdict-adjudication.md  ADR-0005-two-firewalls.md  ADR-0006-optional-backends-lazy-imports.md  ADR-0007-content-addressed-data-versioning.md  ADR-0008-engine-enforced-adjudication-firewall.md  ADR-0009-engine-enforced-preregistration.md  ADR-0010-engine-composed-study-runner.md
docs/hardening/: CAMPAIGN.md  PASS-1.md  PASS-10.md  PASS-11.md  PASS-12.md  PASS-13.md  PASS-2.md  PASS-3.md  PASS-4.md  PASS-5.md  PASS-6.md  PASS-7.md  PASS-8.md  PASS-9.md
examples/: minimal_study.py
findings/: README.md  wave-01-preliminary.md
scripts/: capture_transcripts.py  license_gate.py  regenerate_lockfiles.sh  require_green_ci.sh
src/assay_engine/: __init__.py  _canonical.py  _envparse.py  _frozen.py  _local.py  pipeline.py  provenance.py  registry.py
src/assay_engine/algorithms/: __init__.py  anomaly.py  clustering.py  evaluation.py  ranking.py  sampling.py  similarity.py  stats.py  testing.py  text_metrics.py
src/assay_engine/baseline/: __init__.py  determinism.py  primitives.py  toolkit.py
src/assay_engine/contracts/: __init__.py  claims.py  features.py  parser.py  prompts.py  schema.py  study.py
src/assay_engine/graphs/: __init__.py  anomaly.py  classification.py  conv.py  data.py  embeddings.py  explainability.py  heterogeneous.py  link_prediction.py  temporal.py
src/assay_engine/methodology/: __init__.py  adjudication.py  confirm.py  discovery.py  fence.py  firewalls.py  hypothesis.py  preregistration.py  verdict.py
src/assay_engine/observability/: __init__.py  tracing.py  tracking.py
src/assay_engine/orchestration/: __init__.py  gatenode.py  gates.py  graph.py  phases.py
src/assay_engine/persistence/: __init__.py  checkpoint.py  vectorstore.py  versioning.py
src/assay_engine/reasoning/: __init__.py  seam.py
study_runner/: README.md  __main__.py  airflow_dag_example.py  cli.py  example.crontab  run_once.sh
tests/: reference_study.py  test_adjudication.py  test_algorithms_anomaly.py  test_algorithms_clustering.py  test_algorithms_evaluation.py  test_algorithms_ranking.py  test_algorithms_sampling.py  test_algorithms_similarity.py  test_algorithms_stats.py  test_algorithms_testing.py  test_algorithms_text_metrics.py  test_baseline.py  test_confirm.py  test_contract.py  test_coverage_gaps.py  test_discovery.py  test_docs_drift.py  test_firewalls.py  test_graphs_anomaly.py  test_graphs_classification.py  test_graphs_conv.py  test_graphs_data.py  test_graphs_embeddings.py  test_graphs_explainability.py  test_graphs_heterogeneous.py  test_graphs_link_prediction.py  test_immutability.py  test_observability.py  test_orchestration.py  test_orchestration_graph.py  test_packaging.py  test_persistence.py  test_pipeline.py  test_preregistration.py  test_prompt_manifest.py  test_provenance.py  test_reasoning.py  test_scripts.py  test_stubs_and_baseline.py  test_supply_chain.py
tests/integration/: conftest.py  test_methodology_e2e.py  test_observability_live.py  test_orchestration_live.py  test_persistence_live.py  test_pipeline_live.py  test_reasoning_drain.py  test_reasoning_live.py
transcripts/: MANIFEST.json  README.md
transcripts/sessions/8d54714a-d616-4911-a386-9b4b0f2ce74d/subagents/: agent-a05067d59cf434caf.jsonl  agent-a05067d59cf434caf.meta.json  agent-a0699d97d1623ec32.jsonl  agent-a0699d97d1623ec32.meta.json  agent-a08081707db24fb1e.jsonl  agent-a08081707db24fb1e.meta.json  agent-a085dd212b209e414.jsonl  agent-a085dd212b209e414.meta.json  agent-a0f9285269cbef578.jsonl  agent-a0f9285269cbef578.meta.json  agent-a0ff318d4f97d7a2b.jsonl  agent-a0ff318d4f97d7a2b.meta.json  agent-a10c0a84ea4edbc0b.jsonl  agent-a10c0a84ea4edbc0b.meta.json  agent-a172ea6f90a435340.jsonl  agent-a172ea6f90a435340.meta.json  agent-a180a18541c189904.jsonl  agent-a180a18541c189904.meta.json  agent-a1c166a0627831b3a.jsonl  agent-a1c166a0627831b3a.meta.json  agent-a206a8ab8a48cabf9.jsonl  agent-a206a8ab8a48cabf9.meta.json  agent-a20c1a3d374c708b3.jsonl  agent-a20c1a3d374c708b3.meta.json  agent-a20f78671a7482a3f.jsonl  agent-a20f78671a7482a3f.meta.json  agent-a22bbc4621df3de51.jsonl  agent-a22bbc4621df3de51.meta.json  agent-a250cc8ca6c6796b8.jsonl  agent-a250cc8ca6c6796b8.meta.json  agent-a251cf05c8e56c0a3.jsonl  agent-a251cf05c8e56c0a3.meta.json  agent-a263a7bae9858a4a8.jsonl  agent-a263a7bae9858a4a8.meta.json  agent-a2b0b80c2b589939b.jsonl  agent-a2b0b80c2b589939b.meta.json  agent-a2f86eeba84557d63.jsonl  agent-a2f86eeba84557d63.meta.json  agent-a2ff05933f661751d.jsonl  agent-a2ff05933f661751d.meta.json  (+168 more)
transcripts/sessions/8d54714a-d616-4911-a386-9b4b0f2ce74d/tool-results/: b0x4z2s32.txt  b149914ik.txt  b1lff01wm.txt  b1m7nclq9.txt  b220xfqcq.txt  b47perqbb.txt  b4h90hc1c.txt  b6bwtn48u.txt  b7s97ovkg.txt  b89bx1bv9.txt  b8w0xxqln.txt  b9o7hj4t0.txt  backgew08.txt  baji3ag3h.txt  bb4uzwgrg.txt  bb7svpu8u.txt  bb9ezbnf3.txt  bbm1qp5if.txt  bc9nm35pk.txt  bczhetxxl.txt  bdfkw21h2.txt  bge56ni5h.txt  bgqftv5w3.txt  bgwgwzqtz.txt  bhnwad0dj.txt  bj7asozan.txt  bkmj0prlv.txt  bktdrahl2.txt  bl4aowxms.txt  bl7ioezj1.txt  bl8sofmhh.txt  blcaaq3iq.txt  blwbmaupp.txt  blywnyp28.txt  bnk29exol.txt  bnpiwlarz.txt  boc37juto.txt  bogym7bk7.txt  bomy2bo1y.txt  bpp09cv36.txt  (+19 more)
transcripts/sessions/8d54714a-d616-4911-a386-9b4b0f2ce74d/workflows/: wf_049f05ea-b77.json  wf_0c74e868-b38.json  wf_0ce121ac-b52.json  wf_14977f8f-4db.json  wf_1d557968-9a2.json  wf_1f3a57ac-efd.json  wf_22e2fd52-9da.json  wf_28e497d1-2d5.json  (+48 more)
(+1382 files in other folders)
