[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assay-engine"
version = "0.0.1"
description = "Dataset-agnostic engine for rigorous, reproducible empirical ML/NLP on security & privacy data."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "hc-assay" }]

# The engine depends only on goal-agnostic infrastructure. Concrete versions are pinned
# when each component is lifted from the prior hardened platform; kept unpinned here so the
# scaffold installs cleanly before the infra is wired.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Heavy backends for the reasoning seam — installed only where real LLM calls run.
# The engine imports and unit-tests (mocking the backends) without these.
reasoning = [
    "langchain-ollama>=1.1,<2",
    "claude-agent-sdk>=0.2.101,<0.3",
    "anyio>=4,<5",
]
observability = [
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp>=1.25,<2",
    "arize-phoenix>=7.0,<18",
    "openinference-instrumentation-langchain>=0.1.40,<1",
    "mlflow>=3.1,<4",
]
persistence = [
    "langgraph>=1.2,<2",  # core — provides MemorySaver (declared, not left transitive)
    "langgraph-checkpoint-postgres>=3.1,<4",
    "psycopg[binary,pool]>=3.2,<4",
    "qdrant-client>=1.9,<2",
]
orchestration = [
    "langgraph>=1.2,<2",
]
baseline = [
    "numpy>=1.26,<3",  # vectorized similarity at corpus scale (pure-Python fallback otherwise)
]

[tool.hatch.build.targets.wheel]
packages = ["src/assay_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
packages = ["assay_engine"]
strict = true

# Optional reasoning/observability backends are not installed in the type-check env; their
# imports are lazy and guarded at runtime, so treat them as untyped third-party modules.
[[tool.mypy.overrides]]
module = [
    "langchain_ollama.*",
    "claude_agent_sdk.*",
    "anyio.*",
    "opentelemetry.*",
    "phoenix.*",
    "mlflow.*",
    "openinference.*",
    "langgraph.*",
    "qdrant_client.*",
    "psycopg.*",
    "psycopg_pool.*",
    "numpy.*",
]
ignore_missing_imports = true
