[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assay-engine"
dynamic = ["version"]  # single-sourced from src/assay_engine/__init__.py:__version__ (#120)
description = "Dataset-agnostic engine for rigorous, reproducible empirical ML/NLP on security & privacy data."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "thehipsterciso" }]
keywords = ["empirical", "reproducibility", "methodology", "security", "privacy", "ml", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Typing :: Typed",
]
# The engine core is dependency-free; heavy backends are optional extras (lazy-imported,
# ADR-0006). The composed runner and methodology work with no extras installed.
dependencies = []

[project.urls]
Homepage = "https://github.com/thehipsterciso/hc-assay"
Repository = "https://github.com/thehipsterciso/hc-assay"
Issues = "https://github.com/thehipsterciso/hc-assay/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",  # CI integration lane runs `pytest --cov` (#103)
    "ruff>=0.6",
    "mypy>=1.11",
]
# Heavy backends for the reasoning seam — installed only where real LLM calls run.
# The engine imports and unit-tests (mocking the backends) without these.
reasoning = [
    "langchain-ollama>=1.1,<2",
    "claude-agent-sdk>=0.2.101,<0.3",
    "anyio>=4,<5",
]
observability = [
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp>=1.25,<2",
    "arize-phoenix>=17,<18",  # single current major — a >=7 floor admitted 10 majors (#146)
    "openinference-instrumentation-langchain>=0.1.40,<1",
    "mlflow>=3.1,<4",
]
persistence = [
    "langgraph>=1.2,<2",  # core — provides MemorySaver (declared, not left transitive)
    "langgraph-checkpoint-postgres>=3.1,<4",
    "psycopg[binary,pool]>=3.2,<4",
    "qdrant-client>=1.9,<2",
]
orchestration = [
    "langgraph>=1.2,<2",
]
baseline = [
    "numpy>=1.26,<3",  # vectorized similarity at corpus scale (pure-Python fallback otherwise)
]
gnn = [
    "torch>=2.0",
    "torch-geometric>=2.3",
    "pygod>=1.0",
]
# Every backend in one shot (for a full local install). dev tooling stays separate.
all = [
    "assay-engine[reasoning,observability,persistence,orchestration,baseline,gnn]",
]

[tool.hatch.version]
path = "src/assay_engine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/assay_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "src" puts the package on the path; "." (the rootdir) puts the repo root on sys.path so the
# `tests` package itself is importable (several suites do `from tests import reference_study` and
# `from tests.integration.conftest import ...`). Without it, the bare `pytest` console script CI
# runs — unlike `python -m pytest`, which prepends CWD — fails with `ModuleNotFoundError: No
# module named 'tests'`, so the whole CI test step errored at collection (#K-CI-2).
pythonpath = ["src", "."]
filterwarnings = [
    # The unkeyed-trail advisory (#F-049) is intentional and fires whenever run_study is called
    # without a secret — most tests deliberately use the unkeyed reproducible path. Suppress the
    # noise here; test_run_study_warns_when_trail_is_unkeyed asserts the warning fires explicitly.
    "ignore:run_study provenance trail is UNKEYED:UserWarning",
    # The no-recorder gate-node advisory (#F-007) likewise fires in many graph tests that drive a
    # gate node without a provenance recorder; test_make_gate_node_warns_when_no_recorder asserts
    # it explicitly.
    "ignore:make_gate_node:UserWarning",
    # The presence-only pre-registration advisory (#G-006) fires whenever a confirm primitive is
    # called with authority=None — most confirm unit tests do exactly that; one explicit test
    # (test_confirm_primitive_warns_on_presence_only_gate) asserts it fires.
    "ignore:confirm primitive called with authority=None:UserWarning",
]

[tool.coverage.report]
# Defense-in-depth coverage floor (#K-OPS-3 confirm-concern): CI passes --cov-fail-under=90
# explicitly, but carrying the floor here too means a local `pytest --cov` enforces the same
# threshold, and the value is a committed single source rather than only an inline CI flag.
fail_under = 90

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
# No fixed python_version: mypy infers the target from the running interpreter, so the CI
# matrix (3.11–3.14) type-checks against each version rather than only 3.11 (#121).
packages = ["assay_engine"]
strict = true

# Optional reasoning/observability backends are not installed in the type-check env; their
# imports are lazy and guarded at runtime, so treat them as untyped third-party modules.
[[tool.mypy.overrides]]
module = [
    "langchain_ollama.*",
    "claude_agent_sdk.*",
    "anyio.*",
    "opentelemetry.*",
    "phoenix.*",
    "mlflow.*",
    "openinference.*",
    "langgraph.*",
    "qdrant_client.*",
    "psycopg.*",
    "psycopg_pool.*",
    "numpy.*",
    # httpx ships with the reasoning extra; seam.py imports it lazily/guarded for the BULK-tier
    # HTTP timeout, so the no-extras core lane has no stub and mypy --strict failed there (#K-CI-1).
    "httpx.*",
    "torch.*",
    "torch_geometric.*",
    "torch_geometric_temporal.*",
    "pygod.*",
]
ignore_missing_imports = true
